--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 		</div>
 
 	</section>
-
+<!--JOB-INFO  -->
 	<section id="job-info">
 		<div class="container mb-5">
 			<div class="row align-items-start">
@@ -335,6 +335,7 @@
 			</div>
 		</div>
 	</section>
+<!-- 	CERTIFICATE -->
 	<section id="certificate" class="bg-grey">
 		<div class="container">
 			<h1 class="section-title">
@@ -374,7 +375,7 @@
 			</div>
 		</div>
 	</section>
-
+<!--PROJECT  -->
 	<section id="project">
 		<div class="container ">
 			<h1 style="margin-left:40px;" class="section-title">
@@ -472,7 +473,7 @@
 			</div>
 		</div>
 	</section>
-
+<!--FOOTER  -->
 	<section id="footer" class="bg-grey">
 		<div class="container">
 			<div class="social-net">
