--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 	<!-- BANNER -->
 	<div id="banner">
-		<div class="banner-img"><img src="images/banner.jpg"></div>
+		<div class="banner-img"></div>
 		<div id="banner-text">
 			<h1>Nguyễn Đình Hiệu</h1>
 			<span>Full Stack Developer</span>
